add item button on "books" page

--- a/Kutuphane/Views/BookType/Index.cshtml
+++ b/Kutuphane/Views/BookType/Index.cshtml
@@ -26,4 +26,10 @@
             }
         </tbody>
     </table>
+
+    <div class="row pt-3 pb-2">
+        <div>
+            <a asp-controller="" asp-action="" class="btn btn-light type" type = "button">Add Item</a>
+        </div>
+    </div>
 </div>
