--- a/Kutuphane/Views/BookType/Index.cshtml
+++ b/Kutuphane/Views/BookType/Index.cshtml
@@ -29,7 +29,7 @@
 
     <div class="row pt-3 pb-2">
         <div>
-            <a asp-controller="" asp-action="" class="btn btn-light type" type = "button">Add Item</a>
+            <a asp-controller="BookType" asp-action="Add" class="btn btn-light type" type = "button">Add Genre</a>
         </div>
     </div>
 </div>
