--- a/Kutuphane/Views/BookType/Add.cshtml
+++ b/Kutuphane/Views/BookType/Add.cshtml
@@ -7,6 +7,7 @@
     <div class="mb-3">
         <label asp-for="type" class="p-0"></label>
         <input asp-for="type" class="form-control" />
+        <span asp-validation-for="type" class="text-danger"></span>
     </div>
     <button type="submit" class="btn btn-success" style="width:250px">Save</button>
     <a asp-controller="BookType" asp-action="Index" class="btn btn-danger" style="width:250px">Cancel</a>
