--- a/Kutuphane/Views/BookType/Index.cshtml
+++ b/Kutuphane/Views/BookType/Index.cshtml
@@ -1,5 +1,18 @@
 ﻿@model List<BookType>
 
+@if (TempData["succses"] != null)
+{
+    <div id="successMessage" class="alert alert-dismissible alert-success">
+        <strong>Well done! </strong>@TempData["succses"]
+    </div>
+}
+
+<script>
+    setTimeout(function () {
+        document.getElementById("successMessage").style.display = "none";
+    }, 2000);
+</script>
+
 <div class="container">
     <div class="row pt-3 pb-4">
         <div>
@@ -31,7 +44,7 @@
 
     <div class="row pt-3 pb-2">
         <div>
-            <a asp-controller="BookType" asp-action="Add" class="btn btn-light type" type = "button">Add Genre</a>
+            <a asp-controller="BookType" asp-action="Add" class="btn btn-light type" type="button">Add Genre</a>
         </div>
     </div>
 </div>
