--- a/Kutuphane/Views/BookType/Index.cshtml
+++ b/Kutuphane/Views/BookType/Index.cshtml
@@ -35,8 +35,8 @@
             {
                 <tr>
                     <td>@_bookType.type</td>
-                    <td><a asp-controller="BookType" asp-action="Edit" asp-route-ID="@_bookType.ID" type="button" class="btn btn-info d-block">Edit</a></td>
-                    <td><a asp-controller="BookType" asp-action="Delete" asp-route-ID="@_bookType.ID" type="button" class="btn btn-danger d-block">Delete</a></td>
+                    <td><a asp-controller="BookType" asp-action="Edit" asp-route-ID="@_bookType.genreID" type="button" class="btn btn-info d-block">Edit</a></td>
+                    <td><a asp-controller="BookType" asp-action="Delete" asp-route-ID="@_bookType.genreID" type="button" class="btn btn-danger d-block">Delete</a></td>
                 </tr>
             }
         </tbody>
