--- a/Kutuphane/Views/Shared/_Layout.cshtml
+++ b/Kutuphane/Views/Shared/_Layout.cshtml
@@ -26,7 +26,10 @@
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="BookType" asp-action="Index">Books</a>
+                            <a class="nav-link" asp-area="" asp-controller="Book" asp-action="Index">Books</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="BookType" asp-action="Index">Book genres</a>
                         </li>
                     </ul>
                 </div>
