--- a/Kutuphane/Views/Book/AddOrEdit.cshtml
+++ b/Kutuphane/Views/Book/AddOrEdit.cshtml
@@ -39,8 +39,8 @@
             </div>
 
             <div class="mb-3">
-                <label asp-for="imageUrl" class="p-0"></label>
-                <input type="file" name="file" class="form-control" />
+                <label asp-for="imageUrl" class="p-0" ></label>
+                <input type="file" name="file" class="form-control" style="color: black;" />
             </div>
 
 
