--- a/Kutuphane/Views/Shared/_Layout.cshtml
+++ b/Kutuphane/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                             <a class="nav-link" asp-area="" asp-controller="Book" asp-action="Index">Books</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Borrow" asp-action="Index">Borrows</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="BookType" asp-action="Index">Book genres</a>
                         </li>
                     </ul>
