--- a/Kutuphane/Views/Home/Privacy.cshtml
+++ b/Kutuphane/Views/Home/Privacy.cshtml
@@ -1,6 +1,42 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Contact";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Contact</p>
+
+<table>
+    <tbody>
+        <td>
+            <div class="card text-white bg-secondary mb-3" style="max-width: 20rem;">
+                <div class="card-header">Github</div>
+                <div class="card-body">
+                    <h4 class="card-title">reinhpash</h4>
+                <p class="card-text"><a href="https://github.com/reinhpash" target="_blank">My Github Page!</a></p>
+                </div>
+        </td>
+    <td width="20px"></td>
+
+        <td>
+        <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
+            <div class="card-header">Instagram</div>
+            <div class="card-body">
+                <h4 class="card-title">reinhpash</h4>
+                <p class="card-text"><a href="https://www.instagram.com/burakreinh/" target="_blank">My Instagram Page!</a></p>
+            </div>
+        </td>
+    <td width="20px"></td>
+    <td>
+        <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
+            <div class="card-header">Personal Website</div>
+            <div class="card-body">
+                <h4 class="card-title">I'm a Game Developer</h4>
+                <p class="card-text"><a href="https://burakpiskin.netlify.app/" target="_blank">My Personal Page!</a></p>
+            </div>
+    </td>
+    </tbody>
+
+</table>
+
+
+
