--- a/Kutuphane/Views/Shared/_Layout.cshtml
+++ b/Kutuphane/Views/Shared/_Layout.cshtml
@@ -23,9 +23,7 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+
                         @if (User.IsInRole(UserRoles.Role_Admin))
                         {
                             <li class="nav-item">
@@ -45,6 +43,10 @@
                                 <a class="nav-link" asp-area="" asp-controller="Book" asp-action="Index">Books</a>
                             </li>
                         }
+
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Contact</a>
+                        </li>
                        
                     </ul>
 
